# minigames

./: .gitignore  DEPLOYMENT.md  GUIDE.md  README.md  USAGE.md  docker-compose.src.yml  docker-compose.yml  start
.github/workflows/: deno.yml  new-issue.yml  node.yml  release.yml  rust.yml  sql.yml
bot/: .env.defaults  .env.example  Dockerfile  import_map.json  run.json
bot/lib/: api.ts  config.ts  games.ts  mod.ts  runtime.ts  shame.ts
bot/scripts/: add  bot  fmt  lint
database/: Dockerfile
database/migrations/: 20211130191016_init.sql  (+12 more)
minigamesbot/: .env.defaults  .env.example  deno.json  import_map.json  run.json
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  build.rs  package.json  sqlx-data.json  tailwind.config.js
server/src/: asset.rs  discord.rs  env.rs  game.rs  game_id.rs  guild.rs  jobs.rs  key.rs  main.rs  postgres.rs  redis.rs  response.rs  token.rs  user.rs  user_id.rs
server/src/cookies/: game_cookie.rs  state_cookie.rs  user_cookie.rs
server/src/game/: api_keys.rs  game.rs  game_id.rs  game_name.rs  game_participant.rs  game_server.rs  game_state.rs  mod.rs  registry.rs
server/src/http/: add_to_server.rs  api_key_header.rs  authorization.rs  complete_game.rs  cors.rs  create_challenge.rs  error.rs  get_challenge.rs  get_game.rs  get_public_key.rs  index.rs  leaderboard.rs  list_games.rs  mod.rs  oauth.rs  play_game.rs  register_game.rs  sign_out.rs  unregister_game.rs
server/src/http/admin/: index.rs  mod.rs  sign_in.rs
server/src/http/admin/partial/: layout.rs
server/src/http/api/v1/: add_to_server.rs  complete_game.rs  create_challenge.rs  create_game_server.rs  delete_game_server.rs  describe_game_server.rs  get_game.rs  get_score.rs  list_game_servers.rs  list_games.rs  mark_game_server_available.rs  mark_game_server_unavailable.rs  mod.rs  register_game.rs  unregister_game.rs  update_game_server.rs
server/src/http/auth/: mod.rs  oauth.rs  sign_out.rs
server/src/http/cookies/: game_cookie.rs  lax.rs  mod.rs  redirect_cookie.rs  user_cookie.rs
server/src/http/dashboard/: admin.rs  context.rs  index.rs  library.rs  mod.rs  sign_in.rs
server/src/http/dashboard/admin/: index.rs  mod.rs
server/src/http/dashboard/admin/servers/: create_game_server.rs  delete_game_server.rs  edit.rs  mod.rs  new.rs  update_game_server.rs
server/src/http/dashboard/partial/: button.rs  construction.rs  empty.rs  game_server_tile.rs  guild_row.rs  header.rs  heading.rs  input.rs  layout.rs  logo.rs  mod.rs  nav.rs  page.rs  text.rs
server/src/public/: index.css
server/src/routes/: challenge.rs  create_challenge.rs  get_challenge.rs  mod.rs
server/src/token/: claims.rs  health_check_claims.rs  jwt.rs  mod.rs  token.rs
server/src/ws/: context.rs  event.rs  mod.rs  peer_map.rs  subscription_map.rs
(+112 files in other folders)
