[package]
name = "server"
version = "0.1.0"
edition = "2021"
include = ["/src", "/public", "README.md", "build.rs", "sqlx-data.json", "tailwind.config.js", "package.json"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
dotenv = "0.15"
futures = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
maud = "0.23" # Cannot use the "rocket" feature, as it is outdated
num-bigint = { version = "0.4", features = ["serde"] }
oauth2 = "4.1"
openssl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "postgres", "offline", "uuid", "json", "migrate"] }
time = "0.2"
tokio = { version = "1.14", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time", "fs"] }
tokio-cron-scheduler = "0.3"
tokio-tungstenite = "0.16"
tokio-stream = "0.1"
tungstenite = "0.16"
uuid = { version = "0.8", features = ["serde", "v4"] }
websocket = { version = "0.26", features = ["async"] }
